Quick setup for mobile-first

--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
+
 <html lang="en">
+   <head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="robots" content="index, follow" />
 
-<head>
-    <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="My 1800 App">
+      <title>Malcolm Wanless | WebDev</title>
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="Description" content="Site description goes here" />
+      <meta name="Author" content="Malcolm Wanless" />
 
-    <!-- Bootstrap Library CSS CDN go here -->
-    <!-- Boostrap Library JS CDN  go here -->
+      <!-- CSS -->
+      <link rel="stylesheet" href="css/reset.css" />
 
-    <!-- Other libraries go here -->
+      <!-- jQuery -->
+      <script
+         src="<https://code.jquery.com/jquery-3.0.0.min.js>"
+         integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="
+         crossorigin="anonymous"
+      ></script>
+   </head>
 
-    <!-- Link to styles of your own -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+   <body>
+      <header>
+         <nav></nav>
+      </header>
 
-</head>
+      <main>
+         <section>Starter skeleton go!</section>
+         <section></section>
+      </main>
 
-<body>
-
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
-    <!------------------------------>
-    <!-- Stuff for body goes here -->
-
-
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
-
-    <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
-
-</body>
-
+      <footer></footer>
+      <script src="/script.js"></script>
+   </body>
 </html>
