Update css stylesheets

--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@
       <meta name="Author" content="Malcolm Wanless" />
 
       <!-- CSS -->
-      <link rel="stylesheet" href="css/reset.css" />
-
-      <!-- jQuery -->
-      <script
-         src="<https://code.jquery.com/jquery-3.0.0.min.js>"
-         integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="
-         crossorigin="anonymous"
-      ></script>
+      <link rel="stylesheet" href="./styles/reset.css" />
+      <link rel="stylesheet" href="./styles/style.css" />
    </head>
 
    <body>
