--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
 
       <main>
-         <section>Starter skeleton go!</section>
+         <section>Starter skeleton go! test</section>
          <section></section>
       </main>
 
