Basic structure setup

--- a/index.html
+++ b/index.html
@@ -13,21 +13,27 @@
       <meta name="Author" content="Malcolm Wanless" />
 
       <!-- CSS -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
       <link rel="stylesheet" href="./styles/reset.css" />
       <link rel="stylesheet" href="./styles/style.css" />
    </head>
 
    <body>
       <header>
-         <nav></nav>
+         <nav id="navbar">
+            <div id="navbar-left">
+               <span class="material-symbols-outlined" id="compost-id">compost</span>
+            </div>
+            <div id="navbar-right">
+               <span class="material-symbols-outlined" id="burger-menu"> menu </span>
+            </div>
+         </nav>
       </header>
 
       <main>
-         <section>Starter skeleton go! test</section>
-         <section></section>
+         <div id="main-container"></div>
       </main>
 
-      <footer></footer>
-      <script src="/script.js"></script>
+      <footer id="footer"></footer>
    </body>
 </html>
