Add landing page main elements

--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="robots" content="index, follow" />
 
-      <title>Malcolm Wanless | WebDev</title>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index, follow" />
 
-      <meta name="Description" content="Site description goes here" />
-      <meta name="Author" content="Malcolm Wanless" />
+  <title>Malcolm Wanless | WebDev</title>
 
-      <!-- CSS -->
-      <link rel="stylesheet" href="./styles/reset.css" />
-      <link rel="stylesheet" href="./styles/style.css" />
-   </head>
+  <meta name="Description" content="Site description goes here" />
+  <meta name="Author" content="Malcolm Wanless" />
 
-   <body>
-      <header>
-         <nav></nav>
-      </header>
+  <!-- CSS -->
+  <link rel="stylesheet" href="./styles/reset.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap">
 
-      <main>
-         <section>Starter skeleton go! test</section>
-         <section></section>
-      </main>
+</head>
 
-      <footer></footer>
-      <script src="/script.js"></script>
-   </body>
+<body>
+  <header>
+    <nav></nav>
+  </header>
+
+  <main>
+    <div id="main_user_interaction">
+      <div class="main_text_box">
+        <label for=".main_text_box_username">Username:</label>
+        <input class="main_text_box_username" type="text">
+      </div>
+      <div class="main_text_box">
+        <label for=".main_text_box_password">Password:</label>
+        <input class="main_text_box_password" type="text">
+      </div>
+      <div id="main_sign_in_button">
+        <button type="button">Sign In</button>
+      </div>
+    </div>
+  </main>
+
+  <footer></footer>
+  <script src="/script.js"></script>
+</body>
+
 </html>
