--- a/index.html
+++ b/index.html
@@ -10,49 +10,16 @@
 
   <title>Malcolm Wanless | WebDev</title>
 
-  <<<<<<< HEAD <meta name="Description" content="Site description goes here" />
+  <meta name="Description" content="Site description goes here" />
   <meta name="Author" content="Malcolm Wanless" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./styles/reset.css" />
-  <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap">
-
-</head>
-
-<body>
-  <header>
-    <nav></nav>
-  </header>
-
-  <main>
-    <div id="main_user_interaction">
-      <div class="main_text_box">
-        <label for=".main_text_box_username">Username:</label>
-        <input class="main_text_box_username" type="text">
-      </div>
-      <div class="main_text_box">
-        <label for=".main_text_box_password">Password:</label>
-        <input class="main_text_box_password" type="text">
-      </div>
-      <div id="main_sign_in_button">
-        <button type="button">Sign In</button>
-      </div>
-    </div>
-  </main>
-
-  <footer></footer>
-  <script src="/script.js"></script>
-</body>
-
-</html>
-=======
-<!-- CSS -->
-<link rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<link rel="stylesheet" href="./styles/reset.css" />
-<link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet" href="./styles/reset.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
 <body>
@@ -86,4 +53,3 @@
 </body>
 
 </html>
->>>>>>> c3ed807ad1ad8961ed066d2bc6800fa0d5378873
