--- a/index.html
+++ b/index.html
@@ -59,12 +59,19 @@
     <!-- Sebastian start -->
 
     <footer id="footer">
-      <img src="./path/to/logo.png" alt="Company Logo" id="footer-logo" />
       <!-- Logo -->
-      <span>Trash to Treasure© 2023</span>
-      <a href="./legal.html">Legal Stuff</a>
-      <a href="./privacy.html">Privacy Notice</a>
-      <a href="./security.html">Security</a>
+
+      <div class="footer-content">
+        <span>Copyright© 2023</span>
+        <a href="./legal.html">Legal Stuff</a>
+        <a href="./privacy.html">Privacy Notice</a>
+      </div>
+
+      <div class="footer-icons">
+        <img src="images/icons8-instagram-50.png" alt="" id="footer-logo" />
+        <img src="images/icons8-facebook-48.png" alt="" id="footer-logo" />
+        <img src="images/icons8-twitter-50.png" alt="" id="footer-logo" />
+      </div>
     </footer>
     <!-- Sebastian End -->
   </body>
