--- a/index.html
+++ b/index.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="robots" content="index, follow" />
 
-      <title>Malcolm Wanless | WebDev</title>
+<head>
+   <meta charset="utf-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="robots" content="index, follow" />
 
-      <meta name="Description" content="Site description goes here" />
-      <meta name="Author" content="Malcolm Wanless" />
+   <title>Malcolm Wanless | WebDev</title>
 
-      <!-- CSS -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-      <link rel="stylesheet" href="./styles/reset.css" />
-      <link rel="stylesheet" href="./styles/style.css" />
-   </head>
+   <meta name="Description" content="Site description goes here" />
+   <meta name="Author" content="Malcolm Wanless" />
 
-   <body>
-      <!-- Malcolm start -->
-      <header>
-         <nav id="navbar">
-            <div id="navbar-left">
-               <span class="material-symbols-outlined" id="compost-id">compost</span>
+   <!-- CSS -->
+   <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+   <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+   <link rel="stylesheet" href="./styles/reset.css" />
+   <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+   <!-- Malcolm start -->
+   <header>
+      <nav id="navbar">
+         <div id="navbar-left">
+            <span class="material-symbols-outlined" id="compost-id">compost</span>
+         </div>
+         <div id="navbar-right">
+            <span class="material-symbols-outlined" id="burger-menu"> menu </span>
+         </div>
+      </nav>
+   </header>
+   <!-- Malcolm end -->
+
+   <!-- Ephraim start -->
+   <main>
+      <div id="main_user_interaction">
+         <div class="main_logo">
+            <h4 class="main_teetotee">Trash to Treasure</h4>
+         </div>
+         <div class="main_text_boxes">
+            <div class="main_text_box1">
+               <label for=".main_text_box_search">Search:</label>
+               <input class="main_text_box_search" type="text" />
             </div>
-            <div id="navbar-right">
-               <span class="material-symbols-outlined" id="burger-menu"> menu </span>
-            </div>
-         </nav>
-      </header>
-      <!-- Malcolm end -->
-      <!-- Ephraim start -->
-
-      <main>
-         <div id="main_user_interaction">
-            <div class="main_text_box">
+            <div class="main_text_box2">
                <label for=".main_text_box_username">Username:</label>
                <input class="main_text_box_username" type="text" />
             </div>
-            <div class="main_text_box">
+            <div class="main_text_box3">
                <label for=".main_text_box_password">Password:</label>
                <input class="main_text_box_password" type="text" />
             </div>
@@ -48,11 +59,14 @@
                <button type="button">Sign In</button>
             </div>
          </div>
-      </main>
-      <!-- Ephraim end -->
-      <!-- Sebastian start -->
+      </div>
+   </main>
+   <!-- Ephraim end -->
 
-      <footer id="footer"></footer>
-      <!-- Sebastian start -->
-   </body>
+   <!-- Sebastian start -->
+
+   <footer id="footer"></footer>
+   <!-- Sebastian start -->
+</body>
+
 </html>
