--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="robots" content="index, follow" />
 
-      <title>Malcolm Wanless | WebDev</title>
+<head>
+   <meta charset="utf-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="robots" content="index, follow" />
 
-      <meta name="Description" content="Site description goes here" />
-      <meta name="Author" content="Malcolm Wanless" />
+   <title>Malcolm Wanless | WebDev</title>
 
-      <!-- CSS -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-      <link rel="stylesheet" href="./styles/reset.css" />
-      <link rel="stylesheet" href="./styles/style.css" />
-   </head>
+   <meta name="Description" content="Site description goes here" />
+   <meta name="Author" content="Malcolm Wanless" />
+
+   <!-- CSS -->
+   <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+   <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+   <link rel="stylesheet" href="./styles/reset.css" />
+   <link rel="stylesheet" href="./styles/style.css" />
+</head>
 
 <body>
    <!-- Malcolm start -->
@@ -62,21 +65,22 @@
 
    <!-- Sebastian start -->
 
-    <footer id="footer">
+   <footer id="footer">
       <!-- Logo -->
 
       <div class="footer-content">
-        <span>Copyright© 2023</span>
-        <a href="./legal.html">Legal Stuff</a>
-        <a href="./privacy.html">Privacy Notice</a>
+         <span>Copyright© 2023</span>
+         <a href="./legal.html">Legal Stuff</a>
+         <a href="./privacy.html">Privacy Notice</a>
       </div>
 
       <div class="footer-icons">
-        <img src="images/icons8-instagram-50.png" alt="" id="footer-logo" />
-        <img src="images/icons8-facebook-48.png" alt="" id="footer-logo" />
-        <img src="images/icons8-twitter-50.png" alt="" id="footer-logo" />
+         <img src="images/icons8-instagram-50.png" alt="" id="footer-logo" />
+         <img src="images/icons8-facebook-48.png" alt="" id="footer-logo" />
+         <img src="images/icons8-twitter-50.png" alt="" id="footer-logo" />
       </div>
-    </footer>
-    <!-- Sebastian End -->
-  </body>
+   </footer>
+   <!-- Sebastian End -->
+</body>
+
 </html>
