test to check for updates

--- a/index.html
+++ b/index.html
@@ -1,85 +1,87 @@
 <!DOCTYPE html>
 
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="robots" content="index, follow" />
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-      <title>Malcolm Wanless | WebDev</title>
+        <title>Malcolm Wanless | WebDev</title>
 
-      <meta name="Description" content="Site description goes here" />
-      <meta name="Author" content="Malcolm Wanless" />
+        <meta name="Description" content="Site description goes here" />
+        <meta name="Author" content="Malcolm Wanless" />
 
-      <!-- CSS -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-      <link rel="stylesheet" href="./styles/reset.css" />
-      <link rel="stylesheet" href="./styles/style.css" />
-   </head>
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="./styles/reset.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
+    </head>
 
-   <body>
-      <!-- Malcolm start -->
-      <header>
-         <nav id="navbar">
-            <div id="navbar-left">
-               <span class="material-symbols-outlined" id="compost-id">compost</span>
+    <body>
+        <!-- Malcolm start -->
+        <header>
+            <nav id="navbar">
+                <div id="navbar-left">
+                    <span class="material-symbols-outlined" id="compost-id">compost</span>
+                </div>
+                <div id="navbar-right">
+                    <span class="material-symbols-outlined" id="burger-menu"> menu </span>
+                </div>
+            </nav>
+        </header>
+        <!-- Malcolm end -->
+
+        <!-- Ephraim start -->
+        <main>
+            <div id="main_user_interaction">
+                <div class="main_logo">
+                    <h4 class="main_teetotee">Trash to Treasure</h4>
+                </div>
+                <div class="main_text_boxes">
+                    <div class="main_text_box1">
+                        <label for=".main_text_box_search">Search:</label>
+                        <input class="main_text_box_search" type="text" />
+                    </div>
+                    <div class="main_text_box2">
+                        <label for=".main_text_box_username">Username:</label>
+                        <input class="main_text_box_username" type="text" />
+                    </div>
+                    <div class="main_text_box3">
+                        <label for=".main_text_box_password">Password:</label>
+                        <input class="main_text_box_password" type="text" />
+                    </div>
+                    <div id="main_sign_in_button">
+                        <button type="button">Sign In</button>
+                    </div>
+                </div>
             </div>
-            <div id="navbar-right">
-               <span class="material-symbols-outlined" id="burger-menu"> menu </span>
+        </main>
+        <!-- Ephraim end -->
+
+        <!-- Sebastian start -->
+
+        <footer id="footer">
+            <!-- Logo -->
+
+            <div class="footer-content">
+                <span>Copyright© 2023</span>
+                <!-- <a href="./legal.html">Legal Stuff</a> -->
+                <!-- <a href="./privacy.html">Privacy Notice</a> -->
+                <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
+                <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
+                <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
             </div>
-         </nav>
-      </header>
-      <!-- Malcolm end -->
 
-      <!-- Ephraim start -->
-      <main>
-         <div id="main_user_interaction">
-            <div class="main_logo">
-               <h4 class="main_teetotee">Trash to Treasure</h4>
-            </div>
-            <div class="main_text_boxes">
-               <div class="main_text_box1">
-                  <label for=".main_text_box_search">Search:</label>
-                  <input class="main_text_box_search" type="text" />
-               </div>
-               <div class="main_text_box2">
-                  <label for=".main_text_box_username">Username:</label>
-                  <input class="main_text_box_username" type="text" />
-               </div>
-               <div class="main_text_box3">
-                  <label for=".main_text_box_password">Password:</label>
-                  <input class="main_text_box_password" type="text" />
-               </div>
-               <div id="main_sign_in_button">
-                  <button type="button">Sign In</button>
-               </div>
-            </div>
-         </div>
-      </main>
-      <!-- Ephraim end -->
-
-      <!-- Sebastian start -->
-
-      <footer id="footer">
-         <!-- Logo -->
-
-         <div class="footer-content">
-            <span>Copyright© 2023</span>
-            <!-- <a href="./legal.html">Legal Stuff</a> -->
-            <!-- <a href="./privacy.html">Privacy Notice</a> -->
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-         </div>
-
-         <!-- <div class="footer-icons">
+            <!-- <div class="footer-icons">
             <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
             <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
             <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
          </div> -->
-      </footer>
-      <!-- Sebastian End -->
-   </body>
+        </footer>
+        <!-- Sebastian End -->
+    </body>
 </html>
+
+<!-- test for push -->
