homepage.html and styling done for functionality

--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
                     <span class="material-symbols-outlined" id="compost-id">compost</span>
                 </div>
                 <div id="navbar-right">
-                    <span class="material-symbols-outlined" id="burger-menu"> menu </span>
+                    <span class="material-symbols-outlined" id="burger-menu">menu</span>
                 </div>
             </nav>
         </header>
@@ -36,26 +36,10 @@
 
         <main>
             <div id="main_user_interaction">
-                <div class="main_logo">
-                    <h4 class="main_teetotee">Trash to Treasure</h4>
-                </div>
-                <div class="main_text_boxes">
-                    <div class="main_text_box1">
-                        <label for=".main_text_box_search">Search:</label>
-                        <input class="main_text_box_search" type="text" />
-                    </div>
-                    <div class="main_text_box2">
-                        <label for=".main_text_box_username">Username:</label>
-                        <input class="main_text_box_username" type="text" />
-                    </div>
-                    <div class="main_text_box3">
-                        <label for=".main_text_box_password">Password:</label>
-                        <input class="main_text_box_password" type="text" />
-                    </div>
-                    <div id="main_sign_in_button">
-                        <button type="button">Sign In</button>
-                    </div>
-                </div>
+                <a href="#" class="home-screen-button" id="home-screen-button1">Search</a>
+                <a href="#" class="home-screen-button" id="home-screen-button2">Upload</a>
+                <a href="#" class="home-screen-button" id="home-screen-button3">Depot Locations</a>
+                <a href="#" class="home-screen-button" id="home-screen-button4">Other Resources</a>
             </div>
         </main>
 
@@ -64,14 +48,12 @@
         <footer id="footer">
             <!-- Logo -->
 
-            <div class="footer-content">
-                <span>Copyright© 2023</span>
-                <!-- <a href="./legal.html">Legal Stuff</a> -->
-                <!-- <a href="./privacy.html">Privacy Notice</a> -->
-                <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-                <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-                <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-            </div>
+            <!-- <a href="./legal.html">Legal Stuff</a> -->
+            <!-- <a href="./privacy.html">Privacy Notice</a> -->
+            <img src="images/icons8-home-48.png" alt="" class="footer-logo" />
+            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
+            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
+            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
 
             <!-- <div class="footer-icons">
             <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
