Finish making image confirmation page

--- a/imageconfirmation.html
+++ b/imageconfirmation.html
@@ -36,10 +36,11 @@
 
         <main>
             <div id="main_user_interaction">
-                <a href="#" class="home-screen-button" id="home-screen-button1">Search</a>
-                <a href="#" class="home-screen-button" id="home-screen-button2">Upload</a>
-                <a href="#" class="home-screen-button" id="home-screen-button3">Depot Locations</a>
-                <a href="#" class="home-screen-button" id="home-screen-button4">Other Resources</a>
+                <div id="image-preview">
+                    <img src="./images/shawn-santiago-etBSKq2Joh0-unsplash.jpg" alt="" />
+                </div>
+                <a href="#" class="upload-buttons" id="upload-button">Upload image</a>
+                <a href="#" class="upload-buttons" id="take-photo-button">Take photo</a>
             </div>
         </main>
 
