--- a/depotlocation.html
+++ b/depotlocation.html
@@ -7,12 +7,21 @@
       <meta name="robots" content="index, follow" />
 
       <title>Trash to treasure</title>
-      <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+      <meta
+         name="Description"
+         content="DTC team 13 mobile-first recycling app"
+      />
       <meta name="Author" content="Malcolm Wanless" />
 
       <!-- CSS -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+      <link
+         rel="stylesheet"
+         href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap"
+      />
+      <link
+         rel="stylesheet"
+         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+      />
       <link rel="stylesheet" href="./styles/reset.css" />
       <link rel="stylesheet" href="./styles/depot.css" />
    </head>
@@ -21,10 +30,14 @@
       <header>
          <nav id="navbar">
             <div id="navbar-left">
-               <span class="material-symbols-outlined" id="compost-id">compost</span>
+               <span class="material-symbols-outlined" id="compost-id"
+                  >compost</span
+               >
             </div>
             <div id="navbar-right">
-               <span class="material-symbols-outlined" id="burger-menu">menu</span>
+               <span class="material-symbols-outlined" id="burger-menu"
+                  >menu</span
+               >
             </div>
          </nav>
       </header>
@@ -36,22 +49,60 @@
             </div>
             <div id="locations-dropdown">
                <select id="depot-locations-select">
-                  <option value="" disabled selected>Select a Depot Location</option>
+                  <option value="" disabled selected>
+                     Nearby Depot Locations
+                  </option>
                   <option value="location1">Location 1</option>
                   <option value="location2">Location 2</option>
                   <option value="location3">Location 3</option>
+                  <option value="location3">Location 4</option>
                </select>
             </div>
-            <a href="#" class="depot-buttons" id="favourites-button">Favourites</a>
-            <a href="#" class="depot-buttons" id="previous-button">Previous</a>
+
+            <!-- Favourites Dropdown -->
+            <div id="favourites-dropdown">
+               <select id="favourites-select">
+                  <option value="" disabled selected>
+                     Favourite Locations
+                  </option>
+                  <option value="favourite1">Favourite 1</option>
+                  <option value="favourite2">Favourite 2</option>
+               </select>
+            </div>
+
+            <!-- Previous Dropdown -->
+            <div id="previous-dropdown">
+               <select id="previous-select">
+                  <option value="" disabled selected>Previous</option>
+                  <option value="previous1">Previous 1</option>
+                  <option value="previous2">Previous 2</option>
+                  <option value="previous3">Previous 3</option>
+               </select>
+            </div>
          </div>
       </main>
 
       <footer id="footer">
-         <img src="images/icons8-home-48.png" alt="Home Icon" class="footer-logo" />
-         <img src="images/icons8-instagram-50.png" alt="Instagram Icon" class="footer-logo" />
-         <img src="images/icons8-facebook-48.png" alt="Facebook Icon" class="footer-logo" />
-         <img src="images/icons8-twitter-50.png" alt="Twitter Icon" class="footer-logo" />
+         <img
+            src="images/icons8-home-48.png"
+            alt="Home Icon"
+            class="footer-logo"
+         />
+         <img
+            src="images/icons8-instagram-50.png"
+            alt="Instagram Icon"
+            class="footer-logo"
+         />
+         <img
+            src="images/icons8-facebook-48.png"
+            alt="Facebook Icon"
+            class="footer-logo"
+         />
+         <img
+            src="images/icons8-twitter-50.png"
+            alt="Twitter Icon"
+            class="footer-logo"
+         />
       </footer>
    </body>
 </html>
