--- a/depotlocation.html
+++ b/depotlocation.html
@@ -49,9 +49,7 @@
             </div>
             <div id="locations-dropdown">
                <select id="depot-locations-select">
-                  <option value="" disabled selected>
-                     Nearby Depot Locations
-                  </option>
+                  <option value="" disabled selected>Nearby</option>
                   <option value="location1">Location 1</option>
                   <option value="location2">Location 2</option>
                   <option value="location3">Location 3</option>
@@ -62,9 +60,7 @@
             <!-- Favourites Dropdown -->
             <div id="favourites-dropdown">
                <select id="favourites-select">
-                  <option value="" disabled selected>
-                     Favourite Locations
-                  </option>
+                  <option value="" disabled selected>Favourite</option>
                   <option value="favourite1">Favourite 1</option>
                   <option value="favourite2">Favourite 2</option>
                </select>
