Polish white space

--- a/depotlocation.html
+++ b/depotlocation.html
@@ -1,104 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="robots" content="index, follow" />
 
-      <title>Trash to treasure</title>
-      <meta
-         name="Description"
-         content="DTC team 13 mobile-first recycling app"
-      />
-      <meta name="Author" content="Malcolm Wanless" />
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
 
-      <!-- CSS -->
-      <link
-         rel="stylesheet"
-         href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap"
-      />
-      <link
-         rel="stylesheet"
-         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-      />
-      <link rel="stylesheet" href="./styles/reset.css" />
-      <link rel="stylesheet" href="./styles/depot.css" />
-   </head>
+    <title>Trash to treasure</title>
+    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+    <meta name="Author" content="Malcolm Wanless" />
 
-   <body>
-      <header>
-         <nav id="navbar">
+    <!-- CSS -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/depot.css" />
+</head>
+
+<body>
+    <header>
+        <nav id="navbar">
             <div id="navbar-left">
-               <span class="material-symbols-outlined" id="compost-id"
-                  >compost</span
-               >
+                <span class="material-symbols-outlined" id="compost-id">compost</span>
             </div>
             <div id="navbar-right">
-               <span class="material-symbols-outlined" id="burger-menu"
-                  >menu</span
-               >
+                <span class="material-symbols-outlined" id="burger-menu">menu</span>
             </div>
-         </nav>
-      </header>
+        </nav>
+    </header>
 
-      <main>
-         <div id="main_user_interaction">
+    <main>
+        <div id="main_user_interaction">
             <div id="image-preview">
-               <img src="images/depot.png" alt="Depot Image" />
+                <img src="images/depot.png" alt="Depot Image" />
             </div>
             <div id="locations-dropdown">
-               <select id="depot-locations-select">
-                  <option value="" disabled selected>Nearby</option>
-                  <option value="location1">Location 1</option>
-                  <option value="location2">Location 2</option>
-                  <option value="location3">Location 3</option>
-                  <option value="location3">Location 4</option>
-               </select>
+                <select id="depot-locations-select">
+                    <option value="" disabled selected>Nearby</option>
+                    <option value="location1">Location 1</option>
+                    <option value="location2">Location 2</option>
+                    <option value="location3">Location 3</option>
+                    <option value="location3">Location 4</option>
+                </select>
             </div>
 
             <!-- Favourites Dropdown -->
             <div id="favourites-dropdown">
-               <select id="favourites-select">
-                  <option value="" disabled selected>Favourite</option>
-                  <option value="favourite1">Favourite 1</option>
-                  <option value="favourite2">Favourite 2</option>
-               </select>
+                <select id="favourites-select">
+                    <option value="" disabled selected>Favourite</option>
+                    <option value="favourite1">Favourite 1</option>
+                    <option value="favourite2">Favourite 2</option>
+                </select>
             </div>
 
             <!-- Previous Dropdown -->
             <div id="previous-dropdown">
-               <select id="previous-select">
-                  <option value="" disabled selected>Previous</option>
-                  <option value="previous1">Previous 1</option>
-                  <option value="previous2">Previous 2</option>
-                  <option value="previous3">Previous 3</option>
-               </select>
+                <select id="previous-select">
+                    <option value="" disabled selected>Previous</option>
+                    <option value="previous1">Previous 1</option>
+                    <option value="previous2">Previous 2</option>
+                    <option value="previous3">Previous 3</option>
+                </select>
             </div>
-         </div>
-      </main>
+        </div>
+    </main>
 
-      <footer id="footer">
-         <img
-            src="images/icons8-home-48.png"
-            alt="Home Icon"
-            class="footer-logo"
-         />
-         <img
-            src="images/icons8-instagram-50.png"
-            alt="Instagram Icon"
-            class="footer-logo"
-         />
-         <img
-            src="images/icons8-facebook-48.png"
-            alt="Facebook Icon"
-            class="footer-logo"
-         />
-         <img
-            src="images/icons8-twitter-50.png"
-            alt="Twitter Icon"
-            class="footer-logo"
-         />
-      </footer>
-   </body>
+    <footer id="footer">
+        <img src="images/icons8-home-48.png" alt="Home Icon" class="footer-logo" />
+        <img src="images/icons8-instagram-50.png" alt="Instagram Icon" class="footer-logo" />
+        <img src="images/icons8-facebook-48.png" alt="Facebook Icon" class="footer-logo" />
+        <img src="images/icons8-twitter-50.png" alt="Twitter Icon" class="footer-logo" />
+    </footer>
+</body>
+
 </html>
