--- a/materialsdisplaypage.html
+++ b/materialsdisplaypage.html
@@ -12,15 +12,13 @@
         <meta name="Description" content="DTC team 13 mobile-first recycling app" />
         <meta name="Author" content="Malcolm Wanless" />
 
-        <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="./styles/reset.css" />
-        <link rel="stylesheet" href="./styles/homepagestyle.css" />
+        <link rel="stylesheet" href="./styles/materialsdisplaypage.css" />
     </head>
 
     <body>
-        <!-- Malcolm start -->
         <header>
             <nav id="navbar">
                 <div id="navbar-left">
@@ -32,35 +30,41 @@
             </nav>
         </header>
 
-        <!-- Reuse above on new pages -->
-
         <main>
             <div id="main_user_interaction">
-                <a href="#" class="home-screen-button" id="home-screen-button1">Search</a>
-                <a href="#" class="home-screen-button" id="home-screen-button2">Upload</a>
-                <a href="#" class="home-screen-button" id="home-screen-button3">Depot Locations</a>
-                <a href="#" class="home-screen-button" id="home-screen-button4">Other Resources</a>
+                <div class="materials-display-element" id="materials-display-top">
+                    <div class="materials-display-element" id="materials-display-image">Image</div>
+                    <div id="materials-tech-info">
+                        <div class="materials-display-element" id="materials-type">
+                            <p>Type:</p>
+                            <div class="recyclable-checkbox"></div>
+                        </div>
+                        <div class="materials-display-element" id="materials-name">
+                            <p>Name:</p>
+                            <div class="recyclable-checkbox"></div>
+                        </div>
+                        <div class="materials-display-element" id="materials-recyclable">
+                            <p>Recyclable?</p>
+                            <div class="recyclable-checkbox"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="materials-display-element" id="materials-details">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit inventore, iusto suscipit ducimus qui numquam quasi
+                    temporibus aliquid atque accusantium.
+                </div>
+                <div class="materials-display-element" id="materials-where-to-recycle-1">Where1</div>
+                <div class="materials-display-element" id="materials-where-to-recycle-2">Where2</div>
+                <div class="materials-display-element" id="materials-where-to-recycle-3">Where3</div>
             </div>
         </main>
 
-        <!-- Reuse below on new pages -->
-
         <footer id="footer">
-            <!-- Logo -->
-
-            <!-- <a href="./legal.html">Legal Stuff</a> -->
-            <!-- <a href="./privacy.html">Privacy Notice</a> -->
             <img src="images/icons8-home-48.png" alt="" class="footer-logo" />
             <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
             <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
             <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-
-            <!-- <div class="footer-icons">
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-         </div> -->
         </footer>
-        <!-- Sebastian End -->
     </body>
 </html>
