materials page details panel complete

--- a/materialsdisplaypage.html
+++ b/materialsdisplaypage.html
@@ -33,30 +33,31 @@
         <main>
             <div id="main_user_interaction">
                 <div class="materials-display-element" id="materials-display-top">
-                    <div class="materials-display-element" id="materials-display-image">Image</div>
+                    <div class="materials-display-element" id="materials-display-image"></div>
                     <div id="materials-tech-info">
-                        <div class="materials-display-element" id="materials-type">
-                            <p>Type:</p>
-                            <div class="recyclable-checkbox"></div>
+                        <div class="materials-display-element-top" id="materials-type">
+                            <p class="title-field">Type:</p>
+                            <div class="recyclable-textbox" id="type-textbox"></div>
                         </div>
-                        <div class="materials-display-element" id="materials-name">
-                            <p>Name:</p>
-                            <div class="recyclable-checkbox"></div>
+                        <div class="materials-display-element-top" id="materials-name">
+                            <p class="title-field">Name:</p>
+                            <div class="recyclable-textbox" id="name-textbox"></div>
                         </div>
-                        <div class="materials-display-element" id="materials-recyclable">
-                            <p>Recyclable?</p>
-                            <div class="recyclable-checkbox"></div>
+                        <div class="materials-display-element-top" id="materials-recyclable">
+                            <p class="title-field">Recyclable?</p>
+                            <div class="recyclable-checkbox" id="name-textbox"></div>
                         </div>
                     </div>
                 </div>
-
-                <div class="materials-display-element" id="materials-details">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit inventore, iusto suscipit ducimus qui numquam quasi
-                    temporibus aliquid atque accusantium.
+                <div id="materials-detail-fields">
+                    <div class="materials-display-element" id="materials-details">
+                        <p class="title-field">Details:</p>
+                        <div id="details-field"></div>
+                    </div>
+                    <div class="materials-display-element" id="materials-where-to-recycle-1">Where1</div>
+                    <div class="materials-display-element" id="materials-where-to-recycle-2">Where2</div>
+                    <div class="materials-display-element" id="materials-where-to-recycle-3">Where3</div>
                 </div>
-                <div class="materials-display-element" id="materials-where-to-recycle-1">Where1</div>
-                <div class="materials-display-element" id="materials-where-to-recycle-2">Where2</div>
-                <div class="materials-display-element" id="materials-where-to-recycle-3">Where3</div>
             </div>
         </main>
 
