--- a/materialsdisplaypage.html
+++ b/materialsdisplaypage.html
@@ -52,11 +52,20 @@
                 <div id="materials-detail-fields">
                     <div class="materials-display-element" id="materials-details">
                         <p class="title-field">Details:</p>
-                        <div id="details-field"></div>
+                        <div class="details-field"></div>
                     </div>
-                    <div class="materials-display-element" id="materials-where-to-recycle-1">Where1</div>
-                    <div class="materials-display-element" id="materials-where-to-recycle-2">Where2</div>
-                    <div class="materials-display-element" id="materials-where-to-recycle-3">Where3</div>
+                    <div class="materials-display-element-bottom" id="materials-where-to-recycle-1">
+                        <p class="title-field-bottom">Where to dispose:</p>
+                        <div class="details-field-where"></div>
+                    </div>
+                    <div class="materials-display-element-bottom" id="materials-where-to-recycle-2">
+                        <p class="title-field-bottom">Where to dispose:</p>
+                        <div class="details-field-where"></div>
+                    </div>
+                    <div class="materials-display-element-bottom" id="materials-where-to-recycle-3">
+                        <p class="title-field-bottom">Where to dispose:</p>
+                        <div class="details-field-where"></div>
+                    </div>
                 </div>
             </div>
         </main>
