display data from firestore on webpage

--- a/search-first-draft.html
+++ b/search-first-draft.html
@@ -61,7 +61,7 @@
             <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
         </div> -->
     </footer>
-    <script src="./scripts/template.js"></script>
+    <script src="./scripts/search-first-draft.js"></script>
 </body>
 
 </html>
