--- a/materialsdisplaypage.html
+++ b/materialsdisplaypage.html
@@ -16,6 +16,13 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="./styles/reset.css" />
         <link rel="stylesheet" href="./styles/materialsdisplaypage.css" />
+        <!-- firebase/firestore stuff -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+        <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     </head>
 
     <body>
@@ -45,7 +52,7 @@
                         </div>
                         <div class="materials-display-element-top" id="materials-recyclable">
                             <p class="title-field">Recyclable?</p>
-                            <div class="recyclable-checkbox" id="name-textbox"></div>
+                            <div class="recyclable-checkbox" id="recyclable-textbox"></div>
                         </div>
                     </div>
                 </div>
@@ -76,5 +83,7 @@
             <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
             <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
         </footer>
+        <script src="scripts/firebaseAPI_DTC13.js"></script>
+        <script src="scripts/database_first_try.js"></script>
     </body>
 </html>
