--- a/materialsdisplaypageplastic.html
+++ b/materialsdisplaypageplastic.html
@@ -63,15 +63,15 @@
                     </div>
                     <div class="materials-display-element-bottom" id="materials-where-to-recycle-1">
                         <p class="title-field-bottom">Where to dispose:</p>
-                        <div class="details-field-where"></div>
+                        <div class="details-field-where" id="details-field-where-1"></div>
                     </div>
                     <div class="materials-display-element-bottom" id="materials-where-to-recycle-2">
                         <p class="title-field-bottom">Where to dispose:</p>
-                        <div class="details-field-where"></div>
+                        <div class="details-field-where" id="details-field-where-2"></div>
                     </div>
                     <div class="materials-display-element-bottom" id="materials-where-to-recycle-3">
                         <p class="title-field-bottom">Where to dispose:</p>
-                        <div class="details-field-where"></div>
+                        <div class="details-field-where" id="details-field-where-3"></div>
                     </div>
                 </div>
             </div>
