Implement read and get to display info

--- a/materialsdisplaypageglass.html
+++ b/materialsdisplaypageglass.html
@@ -63,15 +63,15 @@
                     </div>
                     <div class="materials-display-element-bottom" id="materials-where-to-recycle-1">
                         <p class="title-field-bottom">Where to dispose:</p>
-                        <div class="details-field-where"></div>
+                        <div class="details-field-where" id="location1"></div>
                     </div>
                     <div class="materials-display-element-bottom" id="materials-where-to-recycle-2">
                         <p class="title-field-bottom">Where to dispose:</p>
-                        <div class="details-field-where"></div>
+                        <div class="details-field-where" id="location2"></div>
                     </div>
                     <div class="materials-display-element-bottom" id="materials-where-to-recycle-3">
                         <p class="title-field-bottom">Where to dispose:</p>
-                        <div class="details-field-where"></div>
+                        <div class="details-field-where" id="location3"></div>
                     </div>
                 </div>
             </div>
