--- a/materialsdisplaypagemetals.html
+++ b/materialsdisplaypagemetals.html
@@ -84,6 +84,6 @@
             <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
         </footer>
         <script src="scripts/firebaseAPI_DTC13.js"></script>
-        <script src="scripts/database_first_try.js"></script>
+        <script src="scripts/database_st.js"></script>
     </body>
 </html>
